Add text to Porovnani modelu

--- a/analyza.ipynb
+++ b/analyza.ipynb
@@ -665,9 +665,13 @@
    "source": [
     "## Předzpracování\n",
     "\n",
-    "TODO list:\n",
+    "Původní data tedy nejsou samplovány v rovnoměrných intervalech, a proto je v rámci předzpracování přesamplujeme na každých 15 minut, což je vyčítací frekvence z platformy a k doplnění chybějících hodnot použijeme metodu *fill forward*, která doplní vždy předchozí hodnotu.\n",
     "\n",
-    "- jak a proč jsem předzpracovávál data?"
+    "Data musí přetransformovat do podoby vhodné pro předpovídání časových řad, abychom potom mohli detekovat anomálie. To znamená že z měření v čase $t$ se budeme snažit předpovědět hodnotu `pm10` v čase $t + 1$.\n",
+    "\n",
+    "Poté data rozdělíme na trénovací a validační množinu. Validační množina nám poslouží k výběru modelu a jeho hyperparametrů. Konzervativně jsem se rozhodnul, že data rozdělím na půlky tak, aby odhad byl co nejpřesnější. \n",
+    "\n",
+    "Nakonec aby různé příznaky byly zhruba stejných rozsahů použijeme standadrní škálování, takže každý příznak má trénovací množiny bude mít nulový průměr a jenotkovou standardní odchylku. Takto předzpracovaná data nám umožní i správnou selekci příznaků pomocí linearní regrese s L1 regularizací."
    ]
   },
   {
@@ -717,9 +721,9 @@
    "source": [
     "## Selekce příznaků\n",
     "\n",
-    "TODO list:\n",
+    "Selekce podmnožiny příznaků může být důležitá například pro snížení komunikační zátěže. Vhodné příznaky pro linearní modely můžeme vybrat napříkad pomocí linearní regrese s L1 regularizací (Lasso). Ta totiž koeficienty u nevhodný příznaků drží blízko nule.\n",
     "\n",
-    "- pomocí LASSO lineární regrese ukázat, že stačí pouze zvolený příznak."
+    "Z výše zmíněných důvodů jsem zkusil natrénovat Lasso pro 23 různých hodnot regularizačního parametru na logaritmické škále mezi 10<sup>-10</sup> a 10<sup>1</sup>. Výsledné grafy jasně ukazují, že důležitý je pouze příznak `pm10`, protože ostatní jsou blízké nule, pokud jekvadratická odmocnina ze střední kvadratická odchylka nízká. Pro testované lineární modely stačí tedy uvažovat pouze tento příznak."
    ]
   },
   {
@@ -1098,14 +1102,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Porovnání modelů"
+    "## Porovnání modelů\n",
+    "\n",
+    "Problém je definovám tak, že předpovíme pomocí nějakého algoritmu strojové učení následují hodnotu, která by měla následovat po jich zaznamenaných měření. Předpovězenou hodnotu potom porovnáme s naměřenou hodnotou a pokud se tyto hodnoty nepřirozeně liší, tak měření označíme jako anomálii.\n",
+    "\n",
+    "Jako vhodné algoritmy jsem zvolil tři základní:\n",
+    "\n",
+    "- základní model, který předpokládá že následující hodnota měření bude stejná jako přechozí,\n",
+    "- lineární regresní model a\n",
+    "- rekurentní neuronovou síť (konkrétně dnes nejpopulárnější Long Short-Term Memory).\n",
+    "\n",
+    "Abych mohl modely mezi sebou porovnávat je potřeba zvolit nějakou metriku. Pro regresní problémy je nejpřirozenější odmocnina ze střední kvadratické chyby:\n",
+    "\n",
+    "$$\\mathrm{RMSE} = \\sqrt{\\frac{1}{N} \\sum^{N}_{i = 1}(\\hat{y_i} - y_i)^2},$$\n",
+    "\n",
+    "kde $N$ je počet měření, $\\hat{y_i}$ je predikce modelu a $y_i$ je skutečně naměřená hodnota."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Základní model (baseline)"
+    "### Základní model\n",
+    "\n",
+    "Základní model nám poskytny odrazový můstek, ke kterému budeme moci vztahovat výsledky ostatních modelů. Navíc je jednoduchý na implementaci a dosahuje výsledku vypsaného níže."
    ]
   },
   {
@@ -1131,7 +1151,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linearní regrese"
+    "### Linearní regrese\n",
+    "\n",
+    "Druhým modelem je linearní regrese a nyní už bez regularizace, protože nám zůstal pouze jeden příznak. Pokud necháme tento model předpovídat pouze z bezprostředně předcházející hodnoty dostaneme RMSE viz níže."
    ]
   },
   {
@@ -1155,6 +1177,13 @@
     "\n",
     "linear_rmse = metrics.rmse(y_val, y_pred)\n",
     "print('RMSE lineární regrese:', linear_rmse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Můžeme ale také nechat linearní regresi předpovídat z hodnot větší historie. Graf níže ukazuje výsledek pro velikosti hisotrie 1 až 100. Jako nejlepší se ukazuje velikost historie hodnoty 2, kde je RMSE rovna 0.63797. Následně se RMSE zhorší a poté konverguje k hodnotě zhruba 0,71."
    ]
   },
   {
@@ -1248,7 +1277,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Long Short-Term Memory (LSTM) rekurentní neuronová síť"
+    "### Long Short-Term Memory (LSTM) rekurentní neuronová síť\n",
+    "\n",
+    "Poslední a nejkomplexnější model je [LSTM](https://colah.github.io/posts/2015-08-Understanding-LSTMs/), který dokáže zachytit i nelineární vztahy v datech, a proto vstupu tohoto modelu všechny příznaky.\n",
+    "\n",
+    "Jako architekturu jsou zvolil jednovrstvout rekuretní síť s velikostí skrytého stavu 64. Výstupem ale musí být pouze jedno číslo které predikuje měření PM<sub>10</sub>. Proto je na vlastní buňce LSTM ještě linearní vrstva, která produkuje onu jednu výstupní hodnotu.\n",
+    "\n",
+    "Co se týče trénování, LSTM jsem trénoval na sekvencích délky 100 a celkem 50 epoch. Výsledné RMSE na validační setu viz níže."
    ]
   },
   {
@@ -1347,7 +1382,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Výsledky"
+    "### Výsledky\n",
+    "\n",
+    "Níže jsou porovnány RMSE všech čtyř různých přístupů k předpovědi časové řady na validačním setu a jako nejlepší možnost se tedy jeví lineární regrese."
    ]
   },
   {
