Add text to notebook

--- a/analyza.ipynb
+++ b/analyza.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Detekce anomálií v datech o znečištění ovzduší"
+    "# Detekce anomálií v datech o znečištění ovzduší\n",
+    "\n",
+    "> Chytré lampy na Karlínském náměstí poskytují data o znečištění ovzduší polétavým prachem PM10. V této práci v nich detekuji anomálie pomocí algoritmů strojového učení pro predikci časových řad.\n",
+    "\n",
+    "Otevřená data přináší velký prostor pro aplikaci metod strojového učení a pro zlepšení kvality života nebo přírodního prostředí. Tato práce se zabývá detekcí anomálií v datech o polétavém prachu z chytrých lamp, které jsou poskytovány hlavním městem Praha jako otevřená data.\n",
+    "\n",
+    "Pevné částice (nebo polétavý prach, anglicky particulate matter, PM) jsou tuhé nebo kapalné částice v ovzduší o velikosti v rozsahu 1 nm až 100 µm. Data použitá v tomto projektu obsahují PM<sub>10</sub> (částice menší než 10 µm) a PM<sub>2,5</sub> (částice menší než 2,5 µm). PM2,5 je tedy podmnožina měření PM<sub>10</sub>, a proto budu hledat anomálie pouze v PM<sub>10</sub>.\n",
+    "\n",
+    "V této práci chci prozkoumat přístup k měření pomocí predikce časové řady následovanou prahovnáním. Chci, aby se zvolený model naučil pravidelnosti v datech a pokud se stane něco neočekávaného, tak to pomocí prahování dokáži odhalit. Jako algoritmy strojového učení jsem vyzkoušel lineární regresi a LSTM rekurentní neuronovou síť. Ukázalo se, že lineární regrese pro tento problém postačuje, protože je schopna časovou řadu koncentrace PM<sub>10</sub> nejlépe předpovídat.\n",
+    "\n",
+    "Tato zpráva je rozdělena do několika částí, které se postupně zabývají explorací dat, předzpracovním, metrikami, selekcí příznaků, porovnáním modelů a testováním výsledného algoritmu."
    ]
   },
   {
@@ -35,10 +45,11 @@
    "source": [
     "## Explorace\n",
     "\n",
+    "Pražská datová platforma Golemio poskytuje data z pilotního provozu Senzorické sítě veřejného osvětlení, v rámci kterého bylo nainstalováno 92 chytrých pouličních LED lamp v blízkosti Karlínského náměstí na Praze 8. Některé z těchto lamp mají senzory pro měření a sběr dat o hluku, prašnosti a množství dalších polutantů.\n",
+    "\n",
     "### Datové zdroje\n",
     "\n",
-    "V [katalogu datové platformy Golemio](https://golemio.cz/cs/node/622) jsou k dispozici dva datové CSV soubory:\n",
-    "jeden za druhé pololetí roku 2018 a druhý za zatím uplynulou část prvního pololetí roku 2019. Data z druhé poloviny obsahují celkem 473529 záznamů z toho jsou ale dostupné odečty PM<sub>10</sub> pouze v 129807 případech. V soubory z roku 2019 je zatím celkem 226672 záznamů a z toho 62518 měření PM<sub>10</sub>."
+    "V katalogu datové platformy Golemio jsou k dispozici dva datové CSV soubory: jeden za 2. pololetí roku 2018 a druhý za zatím uplynulou část 1. pololetí roku 2019. Data z roku 2018 obsahují celkem 473529 záznamů. Z toho jsou dostupné odečty PM<sub>10</sub> pouze v 129807 případech. V souboru za roku 2019 je celkem 226672 záznamů a z toho 62518 měření PM<sub>10</sub>."
    ]
   },
   {
@@ -1408,7 +1419,18 @@
    "source": [
     "## Detekce anomálií\n",
     "\n",
-    "Detekuju anomálie v datech jak přicházejí bez samplování. Pokud je mezera větší než 15 minut můžu hlásit chybu."
+    "Nyní po výběru vhodného prediktivního modelu mohu detekovat anomálie postupem stejným jako v článku Time Series Anomaly Detection. Postup je následující:\n",
+    "\n",
+    "1. lineární regresní model s oknem 2 predikuje další měření PM10,\n",
+    "2. predikovanou hodnotu porovnám se skutečně naměřenou hodnotou (vypočítám rozdíl v absolutní hodnotě, $\\mid\\hat{y}- y\\mid$,\n",
+    "3. pomocí prahování určím, zda se jedná o anomálii.\n",
+    "\n",
+    "Histogram absolutní hodnoty rozdílu predikce $\\hat{y}$ \n",
+    "a skutečné hodnoty $y$ je na obrázku níže. Většina hodnot je malé velikosti, protože pochází z předvídatelné distribuce, kterou dokáže lineární regrese zachytit.\n",
+    "\n",
+    "Teď bych potřeboval doménového experta, který by dokázal určit, které rozdíly jsou abnormální a které přirozené. Takový expert ale není k dispozici, a tak zvolím jako hodnotu pro pahování hodnotu okraje prvního binu z histogramu výše: 3,9617.\n",
+    "\n",
+    "Takto zvolený práh odhalil ve validačních datech celkem 9 anomálií, které jsou zobrazeny v obrázku níže."
    ]
   },
   {
@@ -1475,7 +1497,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testování"
+    "## Testování\n",
+    "\n",
+    "Postup pro detekci anomálii je vyvinutý a stačí jej otestovat na testovacích datech. Jak ukazuje graf níže, jsou tyto data daleko složitější a obsahují zřejmě daleko více anomálií. Pro trénování jsem použil všechna data z roku 2018, která předzpracuji stejně jako v předchozích pokusech a následně aplikuji postup popsaný v předchozí části."
    ]
   },
   {
@@ -1500,6 +1524,17 @@
     "ax = test_data.plot(y='pm10', legend=False)\n",
     "ax.set_ylabel('PM$_{10}$')\n",
     "plt.savefig('img/test_data.svg')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podle histogramu níže můj algoritmus opravdu správně detekoval daleko více anomálií než ve validačním setu (pro testovací množinu je hodnota prahu: 6,8293).\n",
+    "\n",
+    "Pomocí stanoveného prahu jsem detekoval celkem 113 anomálií, které jsou zobrazené na grafu níže. Veškeré abnormálně vysoké špičky byly detekovány správně. Také je vidět, že některé špičky detekovány nebyly, to může být tím, že nárůst je tak pozvolný a za tak dlouhý časový okamžik, že se vlastně o anomálii nejedná, ale je to předpovídatelné chování.\n",
+    "\n",
+    "Obrázek níže zobrazuje 9 náhodně vybraných anomálií z celkem 113 detekovaných."
    ]
   },
   {
@@ -1618,7 +1653,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Závěr"
+    "## Závěr\n",
+    "V této práci jsem se zabýval detekcí anomálií v otevřených datech z chytrých lamp o polétavém prachu PM<sub>10</sub>.\n",
+    "Jako nejlepší se ukázalo předpovídat časovou řadu pomocí lineární regrese (LSTM bylo horší),\n",
+    "která na vstup dostane dvě poslední měření.\n",
+    "Následně jsem předpověděnou hodnotu porovnal se skutečnou.\n",
+    "Posledním krokem je prahování,\n",
+    "které určí zda hodnoto je z hlediska modelu normální nebo ne.\n",
+    "\n",
+    "Na testovacích datech se ukázalo,\n",
+    "že tento postup je schopen detekovat většinu anomálií\n",
+    "a také bere v úvahu momentální trendy v datech pokud trvají delší dobu a nestanou se náhlé změny.</p>"
    ]
   }
  ],
