Add comment to notebook

--- a/analyza.ipynb
+++ b/analyza.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "# Detekce anomálií v datech o znečištění ovzduší\n",
     "\n",
-    "> Chytré lampy na Karlínském náměstí poskytují data o znečištění ovzduší polétavým prachem PM10. V této práci v nich detekuji anomálie pomocí algoritmů strojového učení pro predikci časových řad.\n",
+    "**Chytré lampy na Karlínském náměstí poskytují data o znečištění ovzduší polétavým prachem PM<sub>10</sub>. V této práci v nich detekuji anomálie pomocí algoritmů strojového učení pro predikci časových řad.**\n",
     "\n",
     "Otevřená data přináší velký prostor pro aplikaci metod strojového učení a pro zlepšení kvality života nebo přírodního prostředí. Tato práce se zabývá detekcí anomálií v datech o polétavém prachu z chytrých lamp, které jsou poskytovány hlavním městem Praha jako otevřená data.\n",
     "\n",
-    "Pevné částice (nebo polétavý prach, anglicky particulate matter, PM) jsou tuhé nebo kapalné částice v ovzduší o velikosti v rozsahu 1 nm až 100 µm. Data použitá v tomto projektu obsahují PM<sub>10</sub> (částice menší než 10 µm) a PM<sub>2,5</sub> (částice menší než 2,5 µm). PM2,5 je tedy podmnožina měření PM<sub>10</sub>, a proto budu hledat anomálie pouze v PM<sub>10</sub>.\n",
+    "Pevné částice (nebo polétavý prach, anglicky particulate matter, PM) jsou tuhé nebo kapalné částice v ovzduší o velikosti v rozsahu 1 nm až 100 µm. Data použitá v tomto projektu obsahují PM<sub>10</sub> (částice menší než 10 µm) a PM<sub>2,5</sub> (částice menší než 2,5 µm). PM<sub>2,5</sub> je tedy podmnožina měření PM<sub>10</sub>, a proto budu hledat anomálie pouze v PM<sub>10</sub>.\n",
     "\n",
     "V této práci chci prozkoumat přístup k měření pomocí predikce časové řady následovanou prahovnáním. Chci, aby se zvolený model naučil pravidelnosti v datech a pokud se stane něco neočekávaného, tak to pomocí prahování dokáži odhalit. Jako algoritmy strojového učení jsem vyzkoušel lineární regresi a LSTM rekurentní neuronovou síť. Ukázalo se, že lineární regrese pro tento problém postačuje, protože je schopna časovou řadu koncentrace PM<sub>10</sub> nejlépe předpovídat.\n",
     "\n",
@@ -79,6 +79,7 @@
    ],
    "source": [
     "data_file_2018 = 'data/636f6a2e-3a48-4801-afce-05c864adc60e-lampy_2019.csv'\n",
+    "# separator in data from 2018 is semicolon\n",
     "data_2018 = pd.read_csv(data_file_2018, index_col='sid', sep=';', parse_dates=['starttimestamp'])\n",
     "data_2018.info()"
    ]
@@ -147,6 +148,7 @@
     }
    ],
    "source": [
+    "# get unique sensors\n",
     "sids = data_2018.index.unique()\n",
     "print('počet senzorů:', len(sids))"
    ]
@@ -182,7 +184,10 @@
    ],
    "source": [
     "target = 'pm10'\n",
+    "# drop examples where there is no value for PM10\n",
+    "# and return value counts\n",
     "value_counts = data_2018[target].dropna().index.value_counts()\n",
+    "# get sensor with maximal number of measurements\n",
     "sid = value_counts.index[0]\n",
     "value_counts"
    ]
@@ -230,6 +235,8 @@
     }
    ],
    "source": [
+    "# get data only for the sensor with maximal measurements,\n",
+    "# reindex data with starttimestamp and resort according to it\n",
     "train_data = data_2018.loc[sid].set_index('starttimestamp')[features].sort_index()\n",
     "train_data.info()"
    ]
@@ -257,6 +264,7 @@
     }
    ],
    "source": [
+    "# the same as above\n",
     "test_data = data_2019.loc[sid].set_index('starttimestamp')[features].sort_index()\n",
     "test_data.info()"
    ]
@@ -596,6 +604,7 @@
     }
    ],
    "source": [
+    "# remove measurement outside two sigma\n",
     "ax = time_delta[time_delta < time_delta_mean + 2 * time_delta_std].dt.total_seconds().hist(bins=32)\n",
     "ax.set_xlabel('čas (s)')\n",
     "ax.set_ylabel('počet')\n",
@@ -672,17 +681,18 @@
     }
    ],
    "source": [
+    "# resample data to 15 minutes\n",
     "resampled_train_data = data.resample_data(train_data, period='15T')\n",
     "X, y = data.create_dataset(resampled_train_data)\n",
-    "\n",
+    "# split data for validation\n",
     "X_tr_raw, X_val_raw, y_tr_raw, y_val_raw = data.train_validation_split(X, y)\n",
-    "\n",
+    "# create standard scalers\n",
     "X_scaler = StandardScaler()\n",
     "y_scaler = StandardScaler()\n",
-    "\n",
+    "# fit scalers of train data\n",
     "X_tr_all = X_scaler.fit_transform(X_tr_raw)\n",
     "y_tr = y_scaler.fit_transform(y_tr_raw)\n",
-    "\n",
+    "# transform validation data\n",
     "X_val_all = X_scaler.transform(X_val_raw)\n",
     "y_val = y_scaler.transform(y_val_raw)\n",
     "\n",
@@ -1037,18 +1047,19 @@
    "source": [
     "n_features = X_tr_all.shape[1]\n",
     "columns = ['RMSE'] + ['koeficient ' + feature for feature in features]\n",
-    "\n",
+    "# create list of alphas to try\n",
     "n_alphas = 23\n",
     "alphas = np.logspace(-10, 1, n_alphas)\n",
+    "# create DataFrame for data persistent\n",
     "lasso_stats = pd.DataFrame(index=alphas, columns=columns, dtype=np.float)\n",
     "lasso_stats.index.name = 'alpha'\n",
     "\n",
     "for alpha in alphas:\n",
+    "    # train lasso with specific alpha\n",
     "    lasso = linear_model.Lasso(alpha=alpha)\n",
     "    lasso.fit(X_tr_all, y_tr)\n",
-    "\n",
     "    y_pred = lasso.predict(X_val_all)\n",
-    "    \n",
+    "    # compute performance\n",
     "    lasso_rmse = metrics.rmse(y_val, y_pred)\n",
     "    lasso_stats.loc[alpha] = (lasso_rmse, *lasso.coef_)\n",
     "\n",
@@ -1070,6 +1081,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# extract only the PM10 feature\n",
     "target_index = np.where(train_data.columns == 'pm10')[0][0]\n",
     "X_tr = X_scaler.fit_transform(X_tr_raw[:, [target_index]])\n",
     "X_val = X_scaler.transform(X_val_raw[:, [target_index]])"
@@ -1149,7 +1161,6 @@
    "source": [
     "linear_predictor = linear_model.LinearRegression()\n",
     "linear_predictor.fit(X_tr, y_tr)\n",
-    "\n",
     "y_pred = linear_predictor.predict(X_val)\n",
     "\n",
     "linear_rmse = metrics.rmse(y_val, y_pred)\n",
@@ -1230,10 +1241,10 @@
    ],
    "source": [
     "windows = list(range(1, 100))\n",
-    "linear_stats = pd.DataFrame(index=windows, columns=['RMSE'],\n",
-    "                            dtype=np.float)\n",
+    "linear_stats = pd.DataFrame(index=windows, columns=['RMSE'], dtype=np.float)\n",
     "linear_stats.index.name = 'okno'\n",
     "\n",
+    "# try different values of windows\n",
     "for window in windows:\n",
     "    X_tr_trans, y_tr_trans = data.transform_dataset(X_tr, y_tr, window)\n",
     "    X_val_trans, y_val_trans = data.transform_dataset(X_val, y_val, window)\n",
@@ -1341,6 +1352,7 @@
     }
    ],
    "source": [
+    "# setup LSTM and train it\n",
     "lstm = LSTM(input_size=5, hidden_size=64, output_size=1)\n",
     "lstm_stats = lstm.train(X_tr_all, y_tr, X_val_all, y_val,\n",
     "                        n_epochs=50, seq_len=100)\n",
@@ -1449,21 +1461,22 @@
     }
    ],
    "source": [
+    "# again train a linear regression model\n",
     "linear = linear_model.LinearRegression()\n",
     "X_tr_trans, y_tr_trans = data.transform_dataset(X_tr, y_tr, best_window)\n",
     "X_val_trans, y_val_trans = data.transform_dataset(X_val, y_val, best_window)\n",
     "linear.fit(X_tr_trans, y_tr_trans)\n",
-    "\n",
+    "# predict measurements and get differences\n",
     "y_pred = linear.predict(X_val_trans)\n",
     "y_delta = np.abs(y_val_trans - y_pred)\n",
-    "\n",
+    "# show histogram of differences\n",
     "plot.plot_delta_hist(y_delta)\n",
     "plt.savefig('img/delta_histogram.svg')\n",
-    "\n",
+    "# compute threshold\n",
     "_, bins = np.histogram(y_delta)\n",
     "threshold = bins[1]\n",
     "print('práh:', threshold)\n",
-    "\n",
+    "# get anomalies\n",
     "anomalies = y_delta > threshold\n",
     "print('detekováno anomálií:', anomalies.sum())\n",
     "plot.plot_anomalies(anomalies, y_val_trans)\n",
@@ -1553,37 +1566,36 @@
     }
    ],
    "source": [
+    "# prepare data for testing\n",
     "resampled_test_data = data.resample_data(test_data, period='15T')\n",
-    "\n",
     "X_tr = resampled_train_data[['pm10']].values[:-1]\n",
     "y_tr = resampled_train_data[['pm10']].values[1:]\n",
     "X_te = resampled_test_data[['pm10']].values[:-1]\n",
     "y_te = resampled_test_data[['pm10']].values[1:]\n",
-    "\n",
+    "# train linear regression on all data from 2018\n",
     "linear = linear_model.LinearRegression()\n",
     "X_tr_trans, y_tr_trans = data.transform_dataset(X_tr, y_tr, best_window)\n",
     "X_te_trans, y_te_trans = data.transform_dataset(X_te, y_te, best_window)\n",
     "linear.fit(X_tr_trans, y_tr_trans)\n",
-    "\n",
+    "# predict on test data\n",
     "y_pred = linear.predict(X_te_trans)\n",
     "y_delta = np.abs(y_te_trans - y_pred)\n",
-    "\n",
+    "# show histogram\n",
     "plot.plot_delta_hist(y_delta)\n",
     "plt.savefig('img/test_delta_histogram.svg')\n",
-    "\n",
+    "# get threshold for test data\n",
     "_, bins = np.histogram(y_delta)\n",
     "threshold = bins[1]\n",
     "print('práh:', threshold)\n",
-    "\n",
+    "# get anomalies\n",
     "anomalies = y_delta > threshold\n",
     "print('detekováno anomálií v testovacích datech:', anomalies.sum())\n",
-    "\n",
+    "# show random anomalies\n",
     "np.random.seed(16)\n",
     "index = np.arange(anomalies.shape[0])[anomalies.ravel()]\n",
     "random_index = np.random.choice(index, size=9, replace=False)\n",
     "random_anomalies = np.zeros_like(anomalies)\n",
     "random_anomalies[random_index] = True\n",
-    "\n",
     "plot.plot_anomalies(random_anomalies, y_te_trans)\n",
     "plt.savefig('img/test_anomalies.svg')"
    ]
@@ -1617,7 +1629,7 @@
    "source": [
     "test_data_with_anomalies = resampled_test_data.iloc[best_window:].copy()\n",
     "test_data_with_anomalies['anomaly'] = anomalies\n",
-    "\n",
+    "# plot anomalies in test data\n",
     "ax = plt.axes()\n",
     "test_data_with_anomalies.plot(ax=ax, y='pm10', legend=False)\n",
     "test_data_with_anomalies[test_data_with_anomalies['anomaly']].plot(ax=ax, y='pm10', style='ro', legend=False)\n",
